# search_engine

./: CMakeLists.txt  README.md  invertedIndex.cpp  invertedIndex.h  main.cpp  searchServer.cpp  searchServer.h
Google_tests/: CMakeLists.txt  invertedIndexTest.cpp  searchServerTests.cpp
json_files/: answers.json  config.json  requests.json
test_files/: file004.txt
